本地自测，编译不通过